# ros2_whill_interfaces

./: README.md
whill_msgs/: CMakeLists.txt  package.xml
whill_msgs/msg/: ModelCr2State.msg  SpeedProfile.msg
whill_msgs/srv/: SetBatterySaving.srv
